Add images and text to the popup input field

--- a/src/components/waldo.css
+++ b/src/components/waldo.css
@@ -1,11 +1,18 @@
 .userClick {
     width: 200px;
-    height: 400px;
+    height: fit-content;
     background-color: white;
     position: absolute;
     display: none;
 }
 
 .showPopUp {
-    display: block;
+    display: flex;
+    grid-template-columns: 2fr;
+    flex-direction: column;
+}
+
+.inputLine {
+    display: flex;
+    align-items: center;
 }
