Add leaderboard screen after the game finishes

--- a/src/components/game/waldo.css
+++ b/src/components/game/waldo.css
@@ -31,3 +31,12 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
+
+.endGame {
+    background:red;
+    position:fixed;
+    top:0px;
+    right:0px;
+    bottom:0px;
+    left:0px;
+}
