--- a/src/components/game/waldo.css
+++ b/src/components/game/waldo.css
@@ -48,3 +48,7 @@
     font-weight: 800;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+
+.imageContainer {
+    position: relative;
+}
