--- a/src/components/game/waldo.css
+++ b/src/components/game/waldo.css
@@ -43,12 +43,16 @@
 
 .foundChar {
     position: absolute;
-    height: 36px;
-    width: 36px;
+    height: 70px;
+    width: 70px;
     border:  5px solid rgb(0, 255, 0);
     border-radius: 100%;
 }
 
 .imageContainer {
     position: relative;
+}
+
+.waldoGame {
+    align-self: center;
 }
