--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -4,8 +4,9 @@
     width: fit-content;
     position: fixed;
     bottom: 0;
+    right: 0;
     padding: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
