--- a/src/components/game/waldo.css
+++ b/src/components/game/waldo.css
@@ -22,14 +22,20 @@
 }
 
 .imagePreview {
-    height: 150px;
-    border: 3px solid rgb(113, 103, 103);
+    width: 600px;
+    height: 380px;
+    border: 3px solid rgb(255, 0, 0);
     border-radius: 10px;
+    margin: 5px;
 }
 
 .imagePreviewContainer {
     display: grid;
+    justify-items: center;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: 1fr 1fr;
+    width: 50%;
+    gap: 20px;
 }
 
 .endGame {
@@ -51,8 +57,34 @@
 
 .imageContainer {
     position: relative;
+    display: flex;
 }
 
 .waldoGame {
-    align-self: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.waldoGame img {
+    margin: auto;
+}
+
+.imageSelection {
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    gap: 10px;
+}
+
+.mainGameDiv {
+    display: flex;
+    flex-direction: column;
+}
+
+.mainGameDiv button,
+.mainGameDiv img {
+    margin: auto;
 }
