--- a/src/components/game/waldo.css
+++ b/src/components/game/waldo.css
@@ -3,12 +3,24 @@
 }
 
 .userClick {
-    width: 200px;
+    width: 250px;
     height: fit-content;
-    background-color: white;
+    background-color: red;
     position: absolute;
     display: none;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding-bottom: 10px;
 }
+
+.userClick form {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+
 
 .showPopUp {
     display: flex;
@@ -19,7 +31,11 @@
 .inputLine {
     display: flex;
     align-items: center;
+    margin: 10px;
+    justify-content: space-between;
 }
+
+
 
 .imagePreview {
     width: 600px;
@@ -57,12 +73,13 @@
 
 .imageContainer {
     position: relative;
-    display: flex;
 }
 
 .waldoGame {
     display: flex;
     flex-direction: column;
+    color: white;
+    font-size: 20px;
 }
 
 .waldoGame img {
@@ -82,9 +99,47 @@
 .mainGameDiv {
     display: flex;
     flex-direction: column;
+    background-color: red;
+    padding: 20px;
+    gap: 20px;
 }
 
-.mainGameDiv button,
-.mainGameDiv img {
+.mainGameDiv button {
     margin: auto;
+    border: none;
+    background-color: white;
+    color: red;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 15px;
+    font-weight: 600;
 }
+
+.mainGameDiv button:hover {
+    background-color: rgb(54, 54, 54);
+    color: white;
+}
+
+.mainGameDiv img {
+    border-radius: 10px;
+    border: 5px solid white;
+}
+
+.characterImage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
+    color: rgb(54, 54, 54);
+}
+
+.characterImage img {
+    border: 3px solid red;
+    border-radius: 10px;
+}
+
+.inputLine img {
+    margin: 0;
+}
+
