--- a/src/components/game/waldo.css
+++ b/src/components/game/waldo.css
@@ -18,13 +18,13 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    font-weight: 550;
 }
 
 
 
 .showPopUp {
     display: flex;
-    grid-template-columns: 2fr;
     flex-direction: column;
 }
 
@@ -73,6 +73,12 @@
 
 .imageContainer {
     position: relative;
+    width: 100%;
+    overflow: auto;
+    margin: auto;
+    border-radius: 10px;
+    border: 5px solid white;
+    background-color: white;
 }
 
 .waldoGame {
@@ -84,6 +90,7 @@
 
 .waldoGame img {
     margin: auto;
+    border-radius: 10px;
 }
 
 .imageSelection {
@@ -118,11 +125,6 @@
 .mainGameDiv button:hover {
     background-color: rgb(54, 54, 54);
     color: white;
-}
-
-.mainGameDiv img {
-    border-radius: 10px;
-    border: 5px solid white;
 }
 
 .characterImage {
