--- a/src/components/game/leaderboard.css
+++ b/src/components/game/leaderboard.css
@@ -22,7 +22,7 @@ tr:nth-of-type(2) {
 }
 
 tr:nth-of-type(3) {
-    background-color: rgb(80, 50, 20);
+    background-color: rgb(203, 102, 0);
 }
 
 th {
@@ -31,7 +31,11 @@ th {
 }
 
 table {
-    width: 50%;
+    width: 100%;
     border-collapse: collapse;
     border-radius: 10px;
+}
+
+.leaderBoard div {
+    width: 50%;
 }
