--- a/src/components/game/waldo.css
+++ b/src/components/game/waldo.css
@@ -5,7 +5,7 @@
 .userClick {
     width: 250px;
     height: fit-content;
-    background-color: red;
+    background-color: rgba(0, 0, 0, 0.7);
     position: absolute;
     display: none;
     border-top-right-radius: 10px;
@@ -55,12 +55,15 @@
 }
 
 .endGame {
-    background:red;
+    background:rgba(0, 0, 0, 0.7);
     position:fixed;
     top:0px;
     right:0px;
     bottom:0px;
     left:0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .foundChar {
@@ -145,3 +148,59 @@
     margin: 0;
 }
 
+#resetGame {
+    font-size: 16px;
+    background-color: rgb(120, 0, 0);
+    color: white;
+}
+
+#resetGame:hover {
+    background-color: rgb(255, 0, 0);
+    
+}
+
+#saveHighScore {
+    background-color: rgb(2, 175, 2);
+    color: white;
+    font-size: 16px;
+}
+
+#saveHighScore:hover {
+    background-color: rgb(0, 255, 0);
+}
+
+.highScoreDiv {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 20px;
+    font-size: 28px;
+}
+
+.scoreInput {
+    background-color: gray;
+    color: white;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    text-align: center;
+    margin-left: 10px;
+}
+
+.scoreInput:focus {
+    outline: none;
+}
+
+#currentScoreRow {
+    background-color: rgb(0, 0, 0);
+}
+
+.currentScore {
+    width: 30%;
+    margin: auto;
+}
+
+.currentScoreDiv {
+    width: 100%;
+}
