--- a/src/components/game/waldo.css
+++ b/src/components/game/waldo.css
@@ -102,7 +102,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     gap: 10px;
 }
 
