Fix end game screen css

--- a/src/components/game/waldo.css
+++ b/src/components/game/waldo.css
@@ -237,4 +237,9 @@
     .imageContainer {
         width: 95%;
     }
+
+    .highScoreDiv label,
+    .highScoreDiv p {
+        text-align: center;
+    }
 }
