--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -15,3 +15,12 @@
 .footer a {
     color: white;
 }
+
+@media screen and (max-device-width: 600px) {
+    .footer {
+        width: 100%;
+        border-radius: 0;
+        position: relative;
+        padding: 0;
+    }
+}
